fix(Layout): set spacings of main content

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,6 +22,7 @@
 
   &_nav {
     width: 100%;
+    max-width: 1440px;
 
     ul {
       list-style-type: none;
