--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -6,7 +6,7 @@
   top: $_header_height;
   left: 0;
   bottom: 0;
-  width: 117px;
+  width: $_sideNav_width;
   background-color: $_color_background_dark;
   display: flex;
   flex-direction: column;
